test/functions/vass/report-unresolved-case.good
report-unresolved-case.chpl:2: error: unresolved call 'int(64).these(iterKind)'
